--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
   <div class="container">
     <h2 class="section-title">Documentos</h2>
     <div class="doc-grid">
-      <a href="#" class="doc-card">Convenção</a>
-      <a href="#" class="doc-card">Regimento Interno</a>
-      <a href="#" class="doc-card">Calendário 2026</a>
-      <a href="#" class="doc-card">Editais</a>
+<div class="doc-grid">
+  <a href="/docs/convencao.pdf" class="doc-card" target="_blank">Convenção 2026</a>
+  <a href="/docs/regimento.pdf" class="doc-card" target="_blank">Regimento Interno 2026</a>
+</div>
+      <!-- Insira seus novos documentos aqui -->
     </div>
   </div>
 </section>
