--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <h2 class="section-title">Documentos</h2>
     <div class="doc-grid">
 <div class="doc-grid">
-  <a href="/docs/convencao.pdf" class="doc-card" target="_blank">Convenção 2026</a>
-  <a href="/docs/regimento.pdf" class="doc-card" target="_blank">Regimento Interno 2026</a>
+  <a href="docs/convencao.pdf" class="doc-card" target="_blank">Convenção 2026</a>
+  <a href="docs/regimento.pdf" class="doc-card" target="_blank">Regimento Interno 2026</a>
 </div>
       <!-- Insira seus novos documentos aqui -->
     </div>
